Fix home title on mobile.

--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -63,6 +63,8 @@
 @media only screen and (max-width: 740px) {
   .div1 {
     width: 100%;
+    margin: 0px !important;
+    padding: 0px !important;
   }
 
   span {
@@ -75,6 +77,8 @@
 
   h1 {
     font-size: 2rem !important;
+    letter-spacing: normal;
+
   }
 
   .twoBytwo {
